# jageocoder-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: compat.yml  docker-build.yml  lint.yml
server/: app.py  csvmatch.py  run_waitress.py
server/secret/: env.dist
server/static/js/: mapcontrol.js
server/templates/: addressform.html  base.html  csv.html  index.html  node.html  node_list.html  reverseform.html  rgeocode.html  searchbyform.html  webapi.html
