[tool.poetry]
name = "jageocoder-server"
description = "Web service providing Japanese address geocoding functionality."
version = "1.0.10"
authors = ["Takeshi Sagara <sagara@info-proto.com>"]
repository = "https://github.com/t-sagara/jageocoder-server/"
license = "The MIT License"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
charset-normalizer = "^3.1.0"
cryptography = ">=43.0.1"
Flask = ">=2.2.5, <3.0"
Flask-cors = ">=3.0.0"
Flask-JSONRPC = ">=2.2.0"
jageocoder = ">=2.1.8"
python-dotenv = "^1.0.0"
waitress = "^2.1.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
